# rust-ids

./: README.md
main/: Cargo.toml  config.toml
main/WindowsAlertSystem/: Cargo.toml
main/WindowsAlertSystem/src/: lib.rs
main/logs/: log2024513235935.txt  log202486175748.txt
main/src/: main.rs
